// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writer correctly email files create email with: [engine: NO, suffix: html, locale: en] 1`] = `
"<mjml>
  <mj-body>
    <mj-section>
      <mj-column>
        <mj-text>test</mj-text>
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>
"
`;

exports[`writer correctly email files create email with: [engine: eta, suffix: html, locale: en] 1`] = `
"<mjml>
  <mj-body>
    <mj-section>
      <mj-column>
        <mj-text>hello en</mj-text>
        <mj-text>this is partial 1</mj-text>
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>
"
`;
